Content work; set site global width to 1440px. Analytics shows users have lots of large screens.

--- a/source/products/integration.html.slim
+++ b/source/products/integration.html.slim
@@ -58,10 +58,10 @@ section.section-article.container-color--blue-bright-noise
       h2.headline-3 Integration Facts &amp; Figures
       .row.small-up-1.medium-up-3.align-center
         .column
-          span.headline-1 150+
-          p Total number of sites with live integrations on Datica's platform.
+          span.headline-1 200+
+          p Total number of sites with live integrations using CMI.
         .column
-          span.headline-1 27+
+          span.headline-1 32+
           p Total number of EHRs Datica has helped integrate successfully with customer products.
         .column
           span.headline-1 Millions
@@ -71,41 +71,39 @@ section.section-article
     .columns.small-12.large-8.text-center.group
       h3.headline-3 More than just an API
       p The full suite of integration tooling you need to successfully complete an integration project with a clinical site.
-  .row.align-center.collapse
-    .columns.small-12.large-8
-      .row.small-up-2.align-center
-        .columns.small-12.medium-6
-          .callout.callout--stretch.callout--gray-light
-            h4.headline-5 Connect to any  EHR or system
-            p You'll never have to think twice about whether your project will be supported.
-        .columns.small-12.medium-6
-          .callout.callout--stretch.callout--gray-light
-            h4.headline-5 True scalability
-            p With a toolset on Datica's compliant cloud infrastructure, integrations scale as you scale.
-        .columns.small-12.medium-6
-          .callout.callout--stretch.callout--gray-light
-            h4.headline-5 HIPAA compliant infrastructure
-            p Compliance is a requirement for all data exchange. Never worry about it again.
-        .columns.small-12.medium-6
-          .callout.callout--stretch.callout--gray-light
-            h4.headline-5 Security baked-in from the start
-            p HL7, FHIR, APIs—security is inherently unavailable. We add a security layer to your integration.
-        .columns.small-12.medium-6
-          .callout.callout--stretch.callout--gray-light
-            h4.headline-5 FHIR-proof your app
-            p The future of healthcare data exchange is FHIR. You are ready for the switch when it happens.
-        .columns.small-12.medium-6
-          .callout.callout--stretch.callout--gray-light
-            h4.headline-5 24/7 monitoring
-            p Mission critical data has important uptime requirements. Datica monitors the connection for you.
-        .columns.small-12.medium-6
-          .callout.callout--stretch.callout--gray-light
-            h4.headline-5 Highly available
-            p The hard work to ensuring cloud-based infrastructure is highly available 24/7 is done for you.
-        .columns.small-12.medium-6
-          .callout.callout--stretch.callout--gray-light
-            h4.headline-5 Open source transformations
-            p You own your transformations because we use open source Mirth as the interface engine.
+  .row.small-up-2.medium-up-3.large-up-4.align-center
+    .columns
+      .callout.callout--stretch.callout--gray-light
+        h4.headline-5 Connect to any  EHR or system
+        p You'll never have to think twice about whether your project will be supported.
+    .columns
+      .callout.callout--stretch.callout--gray-light
+        h4.headline-5 True scalability
+        p With a toolset on Datica's compliant cloud infrastructure, integrations scale as you scale.
+    .columns
+      .callout.callout--stretch.callout--gray-light
+        h4.headline-5 HIPAA compliant infrastructure
+        p Compliance is a requirement for all data exchange. Never worry about it again.
+    .columns
+      .callout.callout--stretch.callout--gray-light
+        h4.headline-5 Security baked-in from the start
+        p HL7, FHIR, APIs—security is inherently unavailable. We add a security layer to your integration.
+    .columns
+      .callout.callout--stretch.callout--gray-light
+        h4.headline-5 FHIR-proof your app
+        p The future of healthcare data exchange is FHIR. You are ready for the switch when it happens.
+    .columns
+      .callout.callout--stretch.callout--gray-light
+        h4.headline-5 24/7 monitoring
+        p Mission critical data has important uptime requirements. Datica monitors the connection for you.
+    .columns
+      .callout.callout--stretch.callout--gray-light
+        h4.headline-5 Highly available
+        p The hard work to ensuring cloud-based infrastructure is highly available 24/7 is done for you.
+    .columns
+      .callout.callout--stretch.callout--gray-light
+        h4.headline-5 Open source transformations
+        p You own your transformations because we use open source Mirth as the interface engine.
   hr.narrow/
   .row
     .columns.small-12.text-center
