--- a/source/assets/scss/settings.scss
+++ b/source/assets/scss/settings.scss
@@ -87,7 +87,7 @@ $font-weight-black:             900; // black
 // ---------
 $global-left: left;
 $global-font-size: 100%; // this permits user to ± font size, foundation default
-$global-width: rem-calc(1200);
+$global-width: rem-calc(1440);
 $global-lineheight: 1.5;
 
 // 1a. Colors
@@ -305,10 +305,10 @@ $breakpoints:(
   medium-large: 840px,
   large: 1024px,
   xlarge: 1200px,
-  xxlarge: 1440px
+  xxlarge: $global-width
 );
 $print-breakpoint: large;
-$breakpoint-classes: (small medium medium-large large xlarge xxlarge);
+$breakpoint-classes: (small medium medium-large large xlarge);
 
 // Custom breakpoints
 $custom_breakpoint-mid: 52.5rem; // 840px "medium-large"
