--- a/source/products/integration.html.slim
+++ b/source/products/integration.html.slim
@@ -150,35 +150,45 @@ section.section-article
         li Clinical Documentation Improvement &amp; Physician Query
         li Orthopedic Implant Providers for Supply Chain Optimization &amp; Instrument Tray Reconfiguration
         li Claims Processing and Claim Audit Tracking Solutions
-section.section-article.section--cta-blue.container-image--center data-interchange="[https://images.ctfassets.net/189dvqdsjh46/24KaYDLfRW40mKMOuKEgsS/04a4779c83f98738cc15c9f37b636192/platform-integration-inverted-bg.png?w=1600&h=500&fit=crop, medium]" 
-  .row.align-center
-    .columns.small-12.large-8
-      aside.text-center
-        h3.headline-3 GUIDE: Total Cost of Ownership of Integrations
-        p.lead If you are scoping out an integration project, this simple free guide will help you understand the costs involved, both implicit and hidden.
-        a.button.button--light.cta-button href="/guide/total-cost-of-ownership-of-integrations/" title=("Learn about integrations") 
-          | Download the guide
-          i.fa.fa-angle-right
+
+= partial("/partials/section-promos/tco-guide-ribbon", :locals => { :style => "dark", :align => "right", :bgImage => "https://images.ctfassets.net/189dvqdsjh46/1iP2tqSCPKuIY6gIakoWcM/99abd9b73c0d8b3c029202f9c672b1f7/triangle_theme__darker__Dallas_Ball__-_ash-edmonds-636863-unsplash.jpeg" })
+
 section.section-article
   .row.align-center
     .columns.small-12.large-10.text-center
       h3.headline-4
-        | Need help with your integration?
-        br/
-        | Datica Managed Integration Services takes on the burden.
-  .row.align-center.align-middle
-    .columns.small-12.medium-6.large-6
-      p.lead Integration is a process. If you need help managing the process of an integration through successful completion, and then continue with on-going management, Datica has your back.
-      p.lead Over 100 customers have benefited from our ability to take an average 6-month integration and routinely complete it in under 30 days.
-    .columns.small-12.medium-6.large-4
-      h3.headline-4 Managed Integration Services:
-      ul
-        li Workflow expertise consultation
-        li VPN management
-        li Project management
-        li Testing
-        li Go-live management
-section#cta.section-article.container-color--gray-dark-grad-noise
+        | Integration Services
+      .group
+        blockquote.quote--serif
+          - quote_services = data.site.quotes['4r9Bmb0l8QiMgKqCagOa0E']
+          = Kramdown::Document.new(quote_services["quote_body"]).to_html
+        - if quote_services.has_key?("related_person")
+          = partial("partials/snippets/person", :locals => { :p => quote_services.related_person } )
+        / br/
+        / | Datica Managed Integration Services takes on the burden.
+  / .row.align-center.align-middle
+  /   .columns.small-12.medium-6.large-6
+  /     p.lead Integration is a process. If you need help managing the process of an integration through successful completion, and then continue with on-going management, Datica has your back.
+  /     p.lead Over 100 customers have benefited from our ability to take an average 6-month integration and routinely complete it in under 30 days.
+  /   .columns.small-12.medium-6.large-4
+  /     h3.headline-4 Managed Integration Services:
+  /     ul
+  /       li Workflow expertise consultation
+  /       li VPN management
+  /       li Project management
+  /       li Testing
+  /       li Go-live management
+  .row.align-center.small-up-1.large-up-3
+    .columns
+      h3.headline-4 Project Management
+      p Our team of project managers provide an expert view into integrated with EHRs and health systems. They will help manage timelines, create project plans, and track deliverables.
+    .columns
+      h3.headline-4 Connection Setup and Maintenance
+      p Datica’s Integration Engineers will build, configure, test and maintain VPN connections to allow for transmission of HL7 messages.
+    .columns
+      h3.headline-4 Interface Build and Configuration
+      p We will transform HL7 messages into JSON or FHIR messages to help keep things standard for you across implementations. We have many predesigned channels ready to go.
+section#cta.section-article.container-color--gray-dark-grad
   .row.align-center.align-middle
     .columns.small-12.medium-6
       h2.headline-3.group--2x Schedule a conversation to learn more about Datica's Managed Integration services
@@ -196,7 +206,19 @@ section#cta.section-article.container-color--gray-dark-grad-noise
         p A compliance and integration expert from Datica will follow up to learn how we might be able to help
         hr/
         = partial("partials/snippets/form-hubspot", :locals => { :form_id => "2904bae4-9c64-4ed7-95a5-9af6ae6af302" })
-section#faq.section-article
+
+aside#ctaBottom.container-color--dark-grad-blue
+  .section-article.container-image--center data-interchange="[/public/img/art/platform-iso-illustration-bg.svg, small]"
+    .row.align-center
+      .columns.small-12.medium-10.large-10.text-center
+        h2.headline-3 <strong>End-to-end compliance</strong> with Kubernetes<sup>&reg;</sup> is here.
+    .row.align-center
+      .columns.small-6.large-4.text-right
+        = partial "partials/snippets/button", :locals => { :label => "View Pricing", :title => "View Platform pricing", :url => "/pricing", :button_classes => "button hollow-inverted", :item_id => "cta_bottom_pricing" }
+      .columns.small-6.large-6.text-left
+        = partial "partials/snippets/button", :locals => { :label => "Hear from our customers", :url => "/products/success", :button_classes => "button button--light", :icon => "icon-chevron-right", :icon_color => "black", :icon_align => "right", :item_id => "cta_bottom_tech" }
+
+section#faq.section-article.container-gray-12
   .row.align-center
     .columns.small-12.medium-8.large-8
       h3.headline-3.text-center.group Frequently asked questions about integrations
@@ -219,14 +241,3 @@ section#faq.section-article
         i.fa.fa-angle-up
 
 
-
-aside#ctaBottom.container-color--dark-grad-blue
-  .section-article.container-image--center data-interchange="[/public/img/art/platform-iso-illustration-bg.svg, small]"
-    .row.align-center
-      .columns.small-12.medium-10.large-10.text-center
-        h2.headline-3 <strong>End-to-end compliance</strong> with Kubernetes<sup>&reg;</sup> is here.
-    .row.align-center
-      .columns.small-6.large-4.text-right
-        = partial "partials/snippets/button", :locals => { :label => "View Pricing", :title => "View Platform pricing", :url => "/pricing", :button_classes => "button hollow-inverted", :item_id => "cta_bottom_pricing" }
-      .columns.small-6.large-6.text-left
-        = partial "partials/snippets/button", :locals => { :label => "Explore Platform Capabilities", :title => "Explore the capabilities of the Datica Platform", :url => "/products/compliance", :button_classes => "button button--light", :icon => "icon-chevron-right", :icon_color => "black", :icon_align => "right", :item_id => "cta_bottom_tech" }
