--- a/source/products/integration.html.slim
+++ b/source/products/integration.html.slim
@@ -104,22 +104,8 @@ section.section-article
       .callout.callout--stretch.callout--gray-light
         h4.headline-5 Open source transformations
         p You own your transformations because we use open source Mirth as the interface engine.
-  hr.narrow/
-  .row
-    .columns.small-12.text-center
-      .section--header-light-group
-        h1.color-blue A trusted partner with established healthcare organizations
-      .logo-cloud
-        - data.views.managed_integration.customer_healthsystems_list.each do |logo|
-          img alt="#{logo["name"]}" class=("logo-cloud--item logo-size--#{logo['logoSize']}") src="/public/img/customer-logos/sm/#{logo["slug"]}-logo.png" /
-  hr.narrow/
-  .row
-    .columns.small-12.text-center
-      h2.white-background-header Successful, live integrations with all major EHRs
-      .logo-cloud
-        - data.views.ehrs.ehr_list.each do |logo|
-          img alt="#{logo["name"]}" class=("logo-cloud--item logo-size--#{logo['logoSize']}") src="/public/img/customer-logos/sm/#{logo["slug"]}-logo.png" /
-section.section-article.container-color--blue-alt.text-center
+
+section.section-article.container-gray-5.text-center
   .row.align-center
     .columns.small-12.large-10
       h3.headline-4 One REST API for all your connections
@@ -156,7 +142,7 @@ section.section-article
 section.section-article
   .row.align-center
     .columns.small-12.large-10.text-center
-      h3.headline-4
+      h2.headline-3
         | Integration Services
       .group
         blockquote.quote--serif
@@ -164,6 +150,21 @@ section.section-article
           = Kramdown::Document.new(quote_services["quote_body"]).to_html
         - if quote_services.has_key?("related_person")
           = partial("partials/snippets/person", :locals => { :p => quote_services.related_person } )
+  .row
+    .columns.small-12.text-center
+      .section--header-light-group
+        h1.color-blue A trusted partner with established healthcare organizations
+      .logo-cloud
+        - data.views.managed_integration.customer_healthsystems_list.each do |logo|
+          img alt="#{logo["name"]}" class=("logo-cloud--item logo-size--#{logo['logoSize']}") src="/public/img/customer-logos/sm/#{logo["slug"]}-logo.png" /
+  hr.narrow/
+  .row
+    .columns.small-12.text-center
+      h2.white-background-header Successful, live integrations with all major EHRs
+      .logo-cloud
+        - data.views.ehrs.ehr_list.each do |logo|
+          img alt="#{logo["name"]}" class=("logo-cloud--item logo-size--#{logo['logoSize']}") src="/public/img/customer-logos/sm/#{logo["slug"]}-logo.png" /
+
         / br/
         / | Datica Managed Integration Services takes on the burden.
   / .row.align-center.align-middle
@@ -188,9 +189,10 @@ section.section-article
     .columns
       h3.headline-4 Interface Build and Configuration
       p We will transform HL7 messages into JSON or FHIR messages to help keep things standard for you across implementations. We have many predesigned channels ready to go.
+
 section#cta.section-article.container-color--gray-dark-grad
   .row.align-center.align-middle
-    .columns.small-12.medium-6
+    .columns.small-12.medium-6.large-5
       h2.headline-3.group--2x Schedule a conversation to learn more about Datica's Managed Integration services
       .callout.callout--dark-alpha
         blockquote.quote--serif
@@ -201,22 +203,11 @@ section#cta.section-article.container-color--gray-dark-grad
           .media-object-section.main-section.align-self-middle
             h4.person-name Jon Pearce
             p.person-title CEO, Zipnosis
-    .columns.small-12.medium-6
+    .columns.small-12.medium-6.large-5
       #absoluteForm.callout.callout--large.drop
         p A compliance and integration expert from Datica will follow up to learn how we might be able to help
         hr/
         = partial("partials/snippets/form-hubspot", :locals => { :form_id => "2904bae4-9c64-4ed7-95a5-9af6ae6af302" })
-
-aside#ctaBottom.container-color--dark-grad-blue
-  .section-article.container-image--center data-interchange="[/public/img/art/platform-iso-illustration-bg.svg, small]"
-    .row.align-center
-      .columns.small-12.medium-10.large-10.text-center
-        h2.headline-3 <strong>End-to-end compliance</strong> with Kubernetes<sup>&reg;</sup> is here.
-    .row.align-center
-      .columns.small-6.large-4.text-right
-        = partial "partials/snippets/button", :locals => { :label => "View Pricing", :title => "View Platform pricing", :url => "/pricing", :button_classes => "button hollow-inverted", :item_id => "cta_bottom_pricing" }
-      .columns.small-6.large-6.text-left
-        = partial "partials/snippets/button", :locals => { :label => "Hear from our customers", :url => "/products/success", :button_classes => "button button--light", :icon => "icon-chevron-right", :icon_color => "black", :icon_align => "right", :item_id => "cta_bottom_tech" }
 
 section#faq.section-article.container-gray-12
   .row.align-center
@@ -240,4 +231,15 @@ section#faq.section-article.container-gray-12
         | Schedule a conversation
         i.fa.fa-angle-up
 
+
+aside#ctaBottom.container-color--dark-grad-blue
+  .section-article.container-image--center data-interchange="[/public/img/art/platform-iso-illustration-bg.svg, small]"
+    .row.align-center
+      .columns.small-12.medium-10.large-10.text-center
+        h2.headline-3 <strong>End-to-end compliance</strong> with Kubernetes<sup>&reg;</sup> is here.
+    .row.align-center
+      .columns.small-6.large-4.text-right
+        = partial "partials/snippets/button", :locals => { :label => "View Pricing", :title => "View Platform pricing", :url => "/pricing", :button_classes => "button hollow-inverted", :item_id => "cta_bottom_pricing" }
+      .columns.small-6.large-6.text-left
+        = partial "partials/snippets/button", :locals => { :label => "Hear from our customers", :url => "/products/success", :button_classes => "button button--light", :icon => "icon-chevron-right", :icon_color => "black", :icon_align => "right", :item_id => "cta_bottom_tech" }
 
