Integration, Services pages work

--- a/source/assets/scss/views/platform.scss
+++ b/source/assets/scss/views/platform.scss
@@ -336,7 +336,7 @@ ul.bullet-outside {
     opacity: 0.9;
     font: {
         family: $font_serif;
-        // size: larger;
+        size: larger;
         style: normal;
     }
     // padding: 0 0 0.5rem 0;
