--- a/source/partials/section-promos/_aws-mlh-video.erb
+++ b/source/partials/section-promos/_aws-mlh-video.erb
@@ -15,7 +15,7 @@ end
 %>
 <section id="section-video" <%= section_attrs %>>
     <h3 class="headline-3 group text-center">Build <strong>Breakthrough</strong> Compliant Apps</h3>
-    <div class="row">
+    <div class="row group">
         <div class="columns small-12 medium-6">
             <script src="https://fast.wistia.com/embed/medias/djywh7kkgd.jsonp" async></script><script src="https://fast.wistia.com/assets/external/E-v1.js" async></script><div class="wistia_responsive_padding" style="padding:56.25% 0 0 0;position:relative;"><div class="wistia_responsive_wrapper" style="height:100%;left:0;position:absolute;top:0;width:100%;"><span class="wistia_embed wistia_async_djywh7kkgd popover=true popoverAnimateThumbnail=true videoFoam=true" style="display:inline-block;height:100%;width:100%">&nbsp;</span></div></div>
             
