--- a/source/products/_azure.html.slim
+++ b/source/products/_azure.html.slim
@@ -7,9 +7,9 @@ tags: "compliance, HIPAA, HL7, FHIR, interoperability, EHR, integration"
 date: "May 7, 2018"
 ogType: "product"
 customCSS: "platform"
-layout: platform
+layout: products
 priority: "0.9"
-# collectionName: "platform"
+# collectionName: "products"
 collectionOrder: 5
 ctaCustom: true
 ---
