--- a/source/products/_integration.html.erb
+++ b/source/products/_integration.html.erb
@@ -8,9 +8,9 @@ date: "July 15, 2017"
 ogType: "product"
 share_image: "https://images.ctfassets.net/189dvqdsjh46/3Ll0a3gLi8wKG8A84mUokm/fabae03bd9e4da4e60173d4c2fe89a30/blog-share-default.png"
 customCSS: "platform"
-layout: platform
+layout: products
 priority: "0.9"
-collectionName: "platform"
+collectionName: "products"
 collectionOrder: 3
 ctaCustom: true
 ---
