--- a/source/products/index.html.slim
+++ b/source/products/index.html.slim
@@ -7,8 +7,8 @@ tags: "compliance, HIPAA, HL7, FHIR, interoperability, EHR, Kubernetes"
 date: "March 5, 2018"
 ogType: "product"
 customCSS: "platform"
-layout: platform
-collectionName: "platform"
+layout: products
+collectionName: "products"
 collectionOrder: 1
 priority: "0.9"
 ---
