--- a/source/products/success.html.erb
+++ b/source/products/success.html.erb
@@ -7,9 +7,9 @@ tags: "compliance, HIPAA, HL7, FHIR, interoperability, EHR, integration"
 date: "March 5, 2018"
 ogType: "product"
 customCSS: "platform"
-layout: platform
+layout: products
 priority: "0.9"
-collectionName: "platform"
+collectionName: "products"
 collectionOrder: 4
 ---
 <% current_page.data.share_image = image_share_platform %>
