--- a/source/services/index.html.erb
+++ b/source/services/index.html.erb
@@ -11,7 +11,7 @@ customCSS: "platform"
 customJS: "/public/js/svg-injector.js"
 layout: basic
 priority: "0.9"
-# collectionName: "platform"
+# collectionName: "products"
 # collectionOrder: 5
 ---
 <% sorted_services = data.site.services.to_a.sort_by{ |id, service| service['sort_order'] } %>
