--- a/source/products/_features.html.slim
+++ b/source/products/_features.html.slim
@@ -7,9 +7,9 @@ tags: "compliance, HIPAA, HL7, FHIR, interoperability, EHR, Kubernetes"
 date: "March 5, 2018"
 ogType: "product"
 customCSS: "platform"
-layout: platform
+layout: products
 priority: "0.9"
-collectionName: "platform"
+collectionName: "products"
 collectionOrder: 3
 ctaCustom: true
 ---
