--- a/source/products/_nav-platform.html.erb
+++ b/source/products/_nav-platform.html.erb
@@ -5,7 +5,7 @@
 #		</a>
 #	</li>
 %>
-<% ordered_pages = sitemap.resources.select{|p| p.data.collectionName == "platform" }.sort_by{ |page| page.data.collectionOrder } %>
+<% ordered_pages = sitemap.resources.select{|p| p.data.collectionName == "products" }.sort_by{ |page| page.data.collectionOrder } %>
 <% ordered_pages.each do |page| %>
     <li class="menu-item">
         <a href="<%= page.url %>" title="<%= page.data.summary %>" class="menu-item--link<% if page.url == current_page.url %> is-current<% end %>">
@@ -14,5 +14,5 @@
     </li>
 <% end %>
 <li class="menu-item menu-item--cta">
-    <%= partial "partials/snippets/button", :locals => { :label => "Demo", :title => "Schedule a demo today.", :url => "/demo/", :button_classes => "button button--primary small", :icon => "icon-chevron-right", :icon_color => "white", :item_id => "top-nav", :data_track_group => "platform" } %>
+    <%= partial "partials/snippets/button", :locals => { :label => "Demo", :title => "Schedule a demo today.", :url => "/demo/", :button_classes => "button button--primary small", :icon => "icon-chevron-right", :icon_color => "white", :item_id => "top-nav", :data_track_group => "products" } %>
 </li>
