--- a/source/products/compliance/global.html.slim
+++ b/source/products/compliance/global.html.slim
@@ -7,7 +7,7 @@ tags: "compliance, HIPAA"
 date: "March 5, 2018"
 ogType: "product"
 customCSS: "platform"
-layout: platform
+layout: products
 ---
 ruby:
   current_page.data.share_image = image_share_platform
