--- a/source/products/compliance/index.html.slim
+++ b/source/products/compliance/index.html.slim
@@ -7,8 +7,8 @@ tags: "compliance, HIPAA, HL7, FHIR, interoperability, EHR, integration"
 date: "March 5, 2018"
 ogType: "product"
 customCSS: "platform"
-layout: platform
-collectionName: "platform"
+layout: products
+collectionName: "products"
 collectionOrder: 2
 priority: "0.9"
 ---
