platform => Product CSS

--- a/source/products/aws.html.slim
+++ b/source/products/aws.html.slim
@@ -6,7 +6,7 @@ author: "Datica, Inc."
 tags: "compliance, HIPAA, HL7, FHIR, interoperability, EHR, integration"
 date: "July 15, 2017"
 ogType: "product"
-customCSS: "platform"
+customCSS: "products"
 layout: products
 priority: "0.9"
 # collectionName: "products"
