--- a/source/services/index.html.erb
+++ b/source/services/index.html.erb
@@ -7,7 +7,7 @@ tags: "compliance, HIPAA, HL7, FHIR, interoperability, EHR, integration"
 date: "July 15, 2017"
 ogType: "product"
 share_image: "https://images.ctfassets.net/189dvqdsjh46/3sLvuskfFmYoAieKyCG644/d0b35a015189bad32c0ebc12053129e0/services-share.jpg"
-customCSS: "platform"
+customCSS: "products"
 customJS: "/public/js/svg-injector.js"
 layout: basic
 priority: "0.9"
