--- a/source/products/compliance/global.html.slim
+++ b/source/products/compliance/global.html.slim
@@ -6,7 +6,7 @@ author: "Datica, Inc."
 tags: "compliance, HIPAA"
 date: "March 5, 2018"
 ogType: "product"
-customCSS: "platform"
+customCSS: "products"
 layout: products
 ---
 ruby:
