--- a/source/products/index.html.slim
+++ b/source/products/index.html.slim
@@ -6,7 +6,7 @@ author: "Datica, Inc."
 tags: "compliance, HIPAA, HL7, FHIR, interoperability, EHR, Kubernetes"
 date: "March 5, 2018"
 ogType: "product"
-customCSS: "platform"
+customCSS: "products"
 layout: products
 collectionName: "products"
 collectionOrder: 1
