--- a/source/products/integration.html.slim
+++ b/source/products/integration.html.slim
@@ -7,7 +7,7 @@ tags: "compliance, HIPAA, HL7, FHIR, interoperability, EHR, integration"
 date: "July 15, 2017"
 ogType: "product"
 share_image: "https://images.ctfassets.net/189dvqdsjh46/3Ll0a3gLi8wKG8A84mUokm/fabae03bd9e4da4e60173d4c2fe89a30/blog-share-default.png"
-customCSS: "platform"
+customCSS: "products"
 layout: products
 priority: "0.9"
 collectionName: "products"
