--- a/source/products/success.html.erb
+++ b/source/products/success.html.erb
@@ -6,7 +6,7 @@ author: "Datica, Inc."
 tags: "compliance, HIPAA, HL7, FHIR, interoperability, EHR, integration"
 date: "March 5, 2018"
 ogType: "product"
-customCSS: "platform"
+customCSS: "products"
 layout: products
 priority: "0.9"
 collectionName: "products"
