Changed CTA tagline at bottom of many pages

--- a/source/compliance/index.html.slim
+++ b/source/compliance/index.html.slim
@@ -8,8 +8,8 @@ date: "March 5, 2018"
 ogType: "product"
 customCSS: "products"
 layout: products
-collectionName: "products"
-collectionOrder: 2
+# collectionName: "products"
+# collectionOrder: 2
 priority: "0.9"
 ---
 - current_page.data.share_image = image_share_platform
