--- a/source/products/index.html.slim
+++ b/source/products/index.html.slim
@@ -1,10 +1,10 @@
 ---
-title: "Datica Platform for Compliance in the Cloud"
-summary: "Datica's Platform bridges security and compliance with Kubernetes<sup>&reg;</sup> to offer a complete, enterprise cloud native solution for regulated industries."
-navTitle: "Platform Overview"
+title: "Datica Compliant Kubernetes Service"
+summary: "Datica's Compliant Kubernetes Service (CKS) bridges security and compliance with Kubernetes<sup>&reg;</sup> to offer a complete, enterprise cloud native solution for regulated industries."
+navTitle: "Datica CKS"
 author: "Datica, Inc."
 tags: "compliance, HIPAA, HL7, FHIR, interoperability, EHR, Kubernetes"
-date: "March 5, 2018"
+date: "July 30, 2018"
 ogType: "product"
 customCSS: "products"
 layout: products
@@ -141,4 +141,4 @@ aside#ctaBottom.container-color--dark-grad-blue
       .columns.small-6.large-4.text-right
         = partial "partials/snippets/button", :locals => { :label => "View Pricing", :title => "View Platform pricing", :url => "/pricing", :button_classes => "button hollow-inverted", :item_id => "cta_bottom_pricing" }
       .columns.small-6.large-6.text-left
-        = partial "partials/snippets/button", :locals => { :label => "Explore Platform Capabilities", :title => "Explore the capabilities of the Datica Platform", :url => "/products/compliance", :button_classes => "button button--light", :icon => "icon-chevron-right", :icon_color => "black", :icon_align => "right", :item_id => "cta_bottom_tech" }
+        = partial "partials/snippets/button", :locals => { :label => "Explore Datica CKS", :title => "Explore the capabilities of the Datica Platform", :url => "/products/compliance", :button_classes => "button button--light", :icon => "icon-chevron-right", :icon_color => "black", :icon_align => "right", :item_id => "cta_bottom_tech" }
