--- a/source/index.html.slim
+++ b/source/index.html.slim
@@ -84,4 +84,4 @@ aside#ctaBottom.container-color--dark-grad-blue
       .columns.small-6.large-4.text-right
         = partial "partials/snippets/button", :locals => { :label => "View Pricing", :title => "View Platform pricing", :url => "/pricing/", :button_classes => "button hollow-inverted" }
       .columns.small-6.large-6.text-left
-        = partial "partials/snippets/button", :locals => { :label => "Explore Platform Capabilities", :title => "Explore the capabilities of the Datica Platform", :url => "/products/", :button_classes => "button button--light", :icon => "icon-chevron-right", :icon_color => "black" }
+        = partial "partials/snippets/button", :locals => { :label => "Explore Datica CKS", :title => "Explore the capabilities of the Datica Platform", :url => "/products/", :button_classes => "button button--light", :icon => "icon-chevron-right", :icon_color => "black" }
