Changed many links from products/compliance to /compliance

--- a/source/customer/badges.html.erb
+++ b/source/customer/badges.html.erb
@@ -50,22 +50,22 @@ layout: basic
       <div class="callout drop">
         <h4 class="headline-5">Datica Customer Badge — Large, Dark</h4>
         <p><img src="/public/img/customer-badges/datica-compliance-badge-dark-@2x.png" width="220" alt="badge" /></p>
-        <textarea>&lt;a href=&quot;https://datica.com/products/compliance?utm_source=customerbadge&quot;&gt;&lt;img title=&quot;HIPAA Compliant HITRUST CSF Infrastructure by Datica&quot; src=&quot;https://datica.com/public/img/customer-badges/datica-compliance-badge-dark-@2x.png&quot; width=&quot;220&quot; alt=&quot;HIPAA Compliant HITRUST CSF Infrastructure by Datica&quot;&gt;&lt;/a&gt;</textarea>
+        <textarea>&lt;a href=&quot;https://datica.com/compliance?utm_source=customerbadge&quot;&gt;&lt;img title=&quot;HIPAA Compliant HITRUST CSF Infrastructure by Datica&quot; src=&quot;https://datica.com/public/img/customer-badges/datica-compliance-badge-dark-@2x.png&quot; width=&quot;220&quot; alt=&quot;HIPAA Compliant HITRUST CSF Infrastructure by Datica&quot;&gt;&lt;/a&gt;</textarea>
       </div>
       <div class="callout drop">
         <h4 class="headline-5">Datica Customer Badge — Small, Dark</h4>
         <p><img src="/public/img/customer-badges/datica-compliance-badge-dark.png" width="120" alt="badge" /></p>
-        <textarea>&lt;a href=&quot;https://datica.com/products/compliance?utm_source=customerbadge&quot;&gt;&lt;img title=&quot;HIPAA Compliant HITRUST CSF Infrastructure by Datica&quot; src=&quot;https://datica.com/public/img/customer-badges/datica-compliance-badge-dark.png&quot; width=&quot;120&quot; alt=&quot;HIPAA Compliant HITRUST CSF Infrastructure by Datica&quot;&gt;&lt;/a&gt;</textarea>
+        <textarea>&lt;a href=&quot;https://datica.com/compliance?utm_source=customerbadge&quot;&gt;&lt;img title=&quot;HIPAA Compliant HITRUST CSF Infrastructure by Datica&quot; src=&quot;https://datica.com/public/img/customer-badges/datica-compliance-badge-dark.png&quot; width=&quot;120&quot; alt=&quot;HIPAA Compliant HITRUST CSF Infrastructure by Datica&quot;&gt;&lt;/a&gt;</textarea>
       </div>
       <div class="callout--dark">
         <h4 class="headline-5">Datica Customer Badge — Large, Light</h4>
         <p><img src="/public/img/customer-badges/datica-compliance-badge-light-@2x.png" width="220" alt="badge" /></p>
-        <textarea>&lt;a href=&quot;https://datica.com/products/compliance?utm_source=customerbadge&quot;&gt;&lt;img title=&quot;HIPAA Compliant HITRUST CSF Infrastructure by Datica&quot; src=&quot;https://datica.com/public/img/customer-badges/datica-compliance-badge-light-@2x.png&quot; width=&quot;220&quot; alt=&quot;HIPAA Compliant HITRUST CSF Infrastructure by Datica&quot;&gt;&lt;/a&gt;</textarea>
+        <textarea>&lt;a href=&quot;https://datica.com/compliance?utm_source=customerbadge&quot;&gt;&lt;img title=&quot;HIPAA Compliant HITRUST CSF Infrastructure by Datica&quot; src=&quot;https://datica.com/public/img/customer-badges/datica-compliance-badge-light-@2x.png&quot; width=&quot;220&quot; alt=&quot;HIPAA Compliant HITRUST CSF Infrastructure by Datica&quot;&gt;&lt;/a&gt;</textarea>
       </div>
       <div class="callout--dark">
         <h4 class="headline-5">Datica Customer Badge — Small, Light</h4>
         <p><img src="/public/img/customer-badges/datica-compliance-badge-light.png" width="120" alt="badge" /></p>
-        <textarea>&lt;a href=&quot;https://datica.com/products/compliance?utm_source=customerbadge&quot;&gt;&lt;img title=&quot;HIPAA Compliant HITRUST CSF Infrastructure by Datica&quot; src=&quot;https://datica.com/public/img/customer-badges/datica-compliance-badge-light.png&quot; width=&quot;120&quot; alt=&quot;HIPAA Compliant HITRUST CSF Infrastructure by Datica&quot;&gt;&lt;/a&gt;</textarea>
+        <textarea>&lt;a href=&quot;https://datica.com/compliance?utm_source=customerbadge&quot;&gt;&lt;img title=&quot;HIPAA Compliant HITRUST CSF Infrastructure by Datica&quot; src=&quot;https://datica.com/public/img/customer-badges/datica-compliance-badge-light.png&quot; width=&quot;120&quot; alt=&quot;HIPAA Compliant HITRUST CSF Infrastructure by Datica&quot;&gt;&lt;/a&gt;</textarea>
       </div>
     </div>
   </div>
