--- a/source/products/_integration.html.erb
+++ b/source/products/_integration.html.erb
@@ -17,7 +17,7 @@ ctaCustom: true
 <aside class="hide-for-large pad--sm container-color--blue-alt">
     <div class="row align-middle align-center">
         <div class="columns small-6 medium-4">
-            <a href="/products/compliance" title="Learn about compliance" class="button hollow-inverted expanded small nomargin">Compliance <i class="fa fa-angle-right"></i></a>
+            <a href="/compliance" title="Learn about compliance" class="button hollow-inverted expanded small nomargin">Compliance <i class="fa fa-angle-right"></i></a>
         </div>
         <div class="columns small-6 medium-4">
             <a href="/pricing" title="sign up" class="button button--light expanded small nomargin">Pricing <i class="fa fa-icon fa-angle-right"></i></a>
