--- a/source/products/integration.html.slim
+++ b/source/products/integration.html.slim
@@ -19,7 +19,7 @@ ctaCustom: true
 aside.hide-for-large.pad--sm.container-color--blue-alt
   .row.align-middle.align-center
     .columns.small-6.medium-4
-      = partial "partials/snippets/button", :locals => { :label => "Compliance", :title => "View Platform pricing", :url => "/products/compliance", :button_classes => "button hollow-inverted expanded small nomargin", :item_id => "cta_top_compliance" }
+      = partial "partials/snippets/button", :locals => { :label => "Compliance", :title => "View Platform pricing", :url => "/compliance", :button_classes => "button hollow-inverted expanded small nomargin", :item_id => "cta_top_compliance" }
     .columns.small-6.medium-4
       = partial "partials/snippets/button", :locals => { :label => "View Pricing", :title => "View Platform pricing", :url => "/pricing", :button_classes => "button button--light expanded small nomargin", :item_id => "cta_top_pricing" }
 
