--- a/source/products/_deferred-content.html.erb
+++ b/source/products/_deferred-content.html.erb
@@ -8,7 +8,7 @@
         <p class="lead">Either way, it's beneficial to understand how Datica can increase your compliance coverage, while reducing cost and risk.</p>
     </div>
     <div class="columns small-12 medium-6 large-6">
-        <a href="/products/compliance" title="Datica vs. roll your own compliance" class="button button--light">
+        <a href="/compliance" title="Datica vs. roll your own compliance" class="button button--light">
             <div class="callout-content--left">
                 <h4 class="headline-5">Datica vs. roll your own compliance</h4>
                 <p>You are shouldering more costs and risk than you should be by relying on AWS or Azure covering only 1/10th of controls. Learn how we save you in the long-run.</p>
